--- a/LungLife/lunglife_frontend/src/app/auth/login/pages/register/register.page.html
+++ b/LungLife/lunglife_frontend/src/app/auth/login/pages/register/register.page.html
@@ -84,7 +84,7 @@
             data-test="register-password"
           ></ion-input>
           <ion-button fill="clear" slot="end" (click)="togglePassword()">
-            <ion-icon [name]="showPassword() ? 'eye-off-outline' : 'eye-outline'"></ion-icon>
+            <ion-icon [name]="showPassword() ? 'eye-outline' : 'eye-off-outline'"></ion-icon>
           </ion-button>
         </ion-item>
         
@@ -163,7 +163,7 @@
             data-test="register-confirm-password"
           ></ion-input>
           <ion-button fill="clear" slot="end" (click)="toggleConfirmPassword()">
-            <ion-icon [name]="showConfirmPassword() ? 'eye-off-outline' : 'eye-outline'"></ion-icon>
+            <ion-icon [name]="showConfirmPassword() ? 'eye-outline' : 'eye-off-outline'"></ion-icon>
           </ion-button>
         </ion-item>
         <div class="error-message" *ngIf="registerForm.get('confirmPassword')?.invalid && registerForm.get('confirmPassword')?.touched">
