--- a/LungLife/lunglife_frontend/src/app/auth/login/pages/role-selection/role-selection.page.html
+++ b/LungLife/lunglife_frontend/src/app/auth/login/pages/role-selection/role-selection.page.html
@@ -41,7 +41,7 @@
         expand="block" 
         class="continue-button"
         [disabled]="!canContinue()"
-        (click)="continueToRegister()"
+        (click)="continueToNextStep()"
         data-test="continue-button">
         Continuar
       </ion-button>
